# atlas

./: .cursorignore  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  README_EN.md  app.py  atlas_cli.py  atlas_dearpygui_recommendation.json  atlas_render_trace.json  build.sbt  clean_git_history.sh  cli_config.yaml  cli_template.j2  dearpygui_image_processing_architecture.json  generate_cli.py  manifest.json  package-lock.json  prd-atlas-chart-png.md  prd_context.json  pyproject.toml  tatus  tox.ini  z_READMD.md
.cursor/rules-mdc/: actix-web.mdc  aiohttp.mdc  amazon-ec2.mdc  amazon-s3.mdc  android-sdk.mdc  angular.mdc  ansible.mdc  ant-design.mdc  (+203 more)
.taskmaster/: config.json  state.json
atlas-eval/: README.md
atlas-lwcapi/: README.md
atlas-pekko/: README.md
atlas_dearpygui_gui/: README.md  atlas_node_abc.py  atlas_node_editor.py  main.py  requirements.txt  themes.py
dbt_ads_project/: README.md  dbt.duckdb  dbt_project.yml  query_duckdb.py  rule.md
docs/: chart_render_runner.md  file-data-source.md  getting-started.md  prd-atlas-chart-png.md  prd_context.json  python-atlas-guide.md  python-local-chart-runner.md
generate_ads_data/: Makefile  cli.py  db_utils.py  run_all.sh
gui_content_dse/: ideal_GUI_architecture.md  main.py
helpers/: api_client.py  data_processor.py  manifest_parser.py  query_builder.py
project/: Dependencies.scala  plugins.sbt
pydantic_models/: __init__.py
scripts/: PRD.txt  atlas_cli_helper.sh  generate_demo_data.py  get_duckdb_xml_schema_cached.py  get_schema_cached.sh  meta-iam-url.sh  mock_atlas_server.py  run_all_alerts.sh  run_all_styles.sh  run_all_styles_batch.sh  run_all_styles_fast.sh  run_all_styles_optimized.sh  run_all_styles_optimized_with_signal_line.sh  run_all_styles_single_build.sh  run_visual_alerts.sh  sps_line.args  write-aws-credentials.sh
scripts_png_gen/: README_CAMPAIGN_CHARTS.md  atlas_cli_helper.sh  campaign_data_converter.py  dearpygui_stream.py  gen_args_from_styles_all.py  run_all_alerts.sh  run_all_styles.sh  run_all_styles_optimized.sh  run_all_styles_optimized_with_signal_line.sh  run_args_README.md  run_campaign_charts.sh  run_visual_alerts.sh  test_campaign_process.py
src_python_gui/: EngineDataGenerator.py  README.md  __init__.py  atlas_chart.py  atlas_graph_models.py  chart_from_json.py  main.py
tests/: test_chart_from_json.py  test_cli.py  test_logic.py
tests_python_gui/: conftest.py  test_atlas_chart.py  test_chart_from_json.py
tools/: ChartRenderRunner.scala
z_GUI/: atlas_render_trace_CURRENT_REFERENCE.json  simple_timeseries.py
(+866 files in other folders)
